# VoronoiCellSim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Projects/VoronoiFoam/: CMakeLists.txt
Projects/VoronoiFoam/include/App/: FoamSubApp.h  FoamSubApp2D.h  FoamSubApp3D.h
Projects/VoronoiFoam/include/App/Experiment/: Experiment.h
Projects/VoronoiFoam/include/App/Experiment/Foam2D/: ExperimentCoarsening2D.h  ExperimentConvergenceTest2D.h  ExperimentDCMComparison2D.h  ExperimentImageMatch2D.h  ExperimentRigidBody2D.h  ExperimentRuntimeScaling2D.h
Projects/VoronoiFoam/include/App/Experiment/Foam3D/: ExperimentCleavage3D.h  ExperimentCleavageCylinder3D.h  ExperimentCoarsening3D.h  ExperimentRuntimeScaling3D.h
Projects/VoronoiFoam/include/App/Rendering/: Rendering.h
Projects/VoronoiFoam/include/App/Scenario/: Scenario.h
Projects/VoronoiFoam/include/App/Scenario/Scenario2D/: ConvergenceTest2D.h  RandomSitesInBox2D.h  RandomSitesInMembrane2D.h  RigidBody2D.h
Projects/VoronoiFoam/include/App/Scenario/Scenario3D/: OpenCylinder3D.h  RandomSitesInBox3D.h  RandomSitesInMembrane3D.h
Projects/VoronoiFoam/include/Config/: Config.h
Projects/VoronoiFoam/include/Model/: Model.h  ModelHelper.h
Projects/VoronoiFoam/include/Model/Boundary/: BoundaryGenerator.h  BoundaryHelper.h
Projects/VoronoiFoam/include/Model/Boundary/Boundary2D/: BoundaryGenerator2D.h  BoundaryGeneratorBox2D.h  BoundaryGeneratorPolyline2D.h  BoundaryGeneratorPolylineLaplacian2D.h  BoundaryGeneratorRigidBody2D.h
Projects/VoronoiFoam/include/Model/Boundary/Boundary3D/: BoundaryGenerator3D.h  BoundaryGeneratorBox3D.h  BoundaryGeneratorMesh3D.h  BoundaryGeneratorMeshLaplacian3D.h  BoundaryGeneratorOpenCylinder3D.h
Projects/VoronoiFoam/include/Model/Energy/: DynamicsObjective.h  PerCellFunction.h  PotentialEnergy.h
Projects/VoronoiFoam/include/Model/Energy/Energy2D/: CellEnergy2D.h  CellEnergyCleavage2D.h  CellEnergyCoarsening2D.h
Projects/VoronoiFoam/include/Model/Energy/Energy3D/: CellEnergy3D.h  CellEnergyCleavage3D.h  CellEnergyCoarsening3D.h
Projects/VoronoiFoam/include/Model/Energy/SimplexFunctions/: PerCellFunctionFromSimplex.h
Projects/VoronoiFoam/include/Model/Tessellation/: TessellationGenerator.h
Projects/VoronoiFoam/include/Model/Tessellation/Tessellation2D/: TessellationGenerator2D.h
Projects/VoronoiFoam/include/Model/Tessellation/Tessellation3D/: TessellationGenerator3D.h
Projects/VoronoiFoam/resource/: ronan.txt
Projects/VoronoiFoam/src/: main.cpp
Projects/VoronoiFoam/src/App/: Foam2DSubApp.cpp  Foam3DSubApp.cpp  FoamSubApp.cpp
Projects/VoronoiFoam/src/App/Experiment/Foam2D/: ExperimentCoarsening2D.cpp  ExperimentConvergenceTest2D.cpp  ExperimentImageMatch2D.cpp  (+3 more)
Projects/VoronoiFoam/src/App/Rendering/: Rendering.cpp
Projects/VoronoiFoam/src/App/Scenario/: Scenario.cpp
Projects/VoronoiFoam/src/Model/: Model.cpp  ModelHelper.cpp
Projects/VoronoiFoam/src/Model/Boundary/: BoundaryGenerator.cpp  BoundaryHelper.cpp
Projects/VoronoiFoam/src/Model/Energy/: DynamicsObjective.cpp  PerCellFunction.cpp  PotentialEnergy.cpp
Projects/VoronoiFoam/src/Model/Tessellation/: TessellationGenerator.cpp
(+93 files in other folders)
